# secret-box

./: .env.example  .gitignore  README.md  env.sh  pyproject.toml
docs/superpowers/plans/: 2026-06-21-secretbox.md
docs/superpowers/specs/: 2026-06-21-secretbox-design.md
src/secretbox/: cli.py
src/secretbox/core/: gpg.py  session.py  storage.py
src/secretbox/web/: __main__.py  app.py
src/secretbox/web/static/: app.css  app.js
src/secretbox/web/templates/: base.html  index.html  login.html  unlock.html
tests/: conftest.py  test_cli.py  test_gpg.py  test_session.py  test_storage.py  test_web.py
