[project]
name = "secretbox"
version = "0.1.0"
description = "Local GPG-symmetric file vault with CLI and web UI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "python-dotenv>=1.0",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secretbox = ["web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
